--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,31 +4,45 @@
     android:versionCode="1"
     android:versionName="beta.1">
 
-
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="21" />
     // .INTERNET is needed to pull CaptchaID, the actual Captcha picture and send answers
     <uses-permission android:name="android.permission.INTERNET" />
-
     // .VIBRATE is needed for future use, we'll let it vibrate when a new Captcha arrives
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="21"></uses-sdk>
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault" >
+        android:theme="@android:style/Theme.DeviceDefault">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".TextActivity"
+            android:label="@string/title_activity_text"></activity>
+        <activity
+            android:name=".ConfirmActivity"
+            android:label="@string/title_activity_confirm"></activity>
+        <activity
+            android:name=".ClickActivity"
+            android:label="@string/title_activity_click"></activity>
     </application>
 
 </manifest>
