--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault">
-        <activity
+        android:theme="@style/AppTheme">
+    <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
