--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
     defaultConfig {
-        applicationId "com.dotwee.openkwsolver"
+        applicationId "de.dotwee.openkwsolver"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
