--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "de.dotwee.openkwsolver"
         minSdkVersion 16
         targetSdkVersion 21
-        versionCode 7
-        versionName "beta.7"
+        versionCode 10
+        versionName "v1.0"
     }
     buildTypes {
         release {
