--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,18 +22,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PreferenceActivity"
-            android:label="@string/title_activity_preference"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.dotwee.openkwsolver.MainActivity"/>
-        </activity>
-        <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
-            <meta-data
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/PrefTheme">
+        <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.dotwee.openkwsolver.MainActivity"/>
         </activity>
