--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
             android:label="@string/title_activity_preferences"
             android:parentActivityName=".MainActivity"
             android:theme="@style/PrefTheme">
-        <meta-data
+            <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.dotwee.openkwsolver.MainActivity"/>
+                android:value=".MainActivity"/>
         </activity>
     </application>
 
