--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion '22.0.0'
     defaultConfig {
         applicationId "de.dotwee.openkwsolver"
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 12
         versionName "v1.2"
     }
@@ -33,6 +33,10 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
