--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+!.gradle
 
 
 ### JetBrains template
