--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,11 @@ language: android
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_TARGET=android-21
+    - ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
+
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    # The BuildTools version used by your project
-    - build-tools-21.1.1
-
-    # The SDK version used to compile your project
-    - android-21
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-21
-    - sys-img-armeabi-v7a-android-16
+    - build-tools-22.0.1
 
 before_script:
   # Create and start emulator
